# services/authentication-api/src/modules/users/dto/user.dto.ts
@@ -17,5 +17,7 @@ export class CreateUserDto extends createZodDto(
     name: userSchema.name,
     email: userSchema.email,
     password: userSchema.password,
+    recoveryToken: userSchema.recoveryToken,
+    recoveryTokenExpiration: userSchema.recoveryTokenExpiration,
   }),
 ) {}
